[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/PracticeTester/ui/theme/fonts/font_title.tres" type="DynamicFont" id=1]
[ext_resource path="res://ObstacleCourse/assets/shadow_circle.png" type="Texture" id=2]
[ext_resource path="res://ObstacleCourse_Part3/assets/obstacle_course_part3.theme" type="Theme" id=3]
[ext_resource path="res://ObstacleCourse_Part3/CharacterStatsDemo/UICharacterStats.gd" type="Script" id=4]
[ext_resource path="res://ObstacleCourse/assets/godot.png" type="Texture" id=7]

[node name="UICharacterStats" type="Panel"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 4 )

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.356863 )
position = Vector2( 613, 612.5 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 613, 612.5 )
texture = ExtResource( 7 )
offset = Vector2( 0, -61 )
hframes = 3
vframes = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -224.0
margin_top = -148.0
margin_right = 224.0
margin_bottom = 148.0
size_flags_horizontal = 3
custom_constants/separation = 8
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 49.0
margin_right = 448.0
margin_bottom = 80.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 1 )
text = "Character name"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 88.0
margin_right = 448.0
margin_bottom = 108.0
custom_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 116.0
margin_right = 448.0
margin_bottom = 154.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 42.0
margin_top = 5.0
margin_right = 202.0
margin_bottom = 33.0
rect_min_size = Vector2( 160, 0 )
text = "Strength"

[node name="StrengthSpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
margin_left = 206.0
margin_right = 406.0
margin_bottom = 38.0
rect_min_size = Vector2( 200, 0 )
min_value = 1.0
max_value = 99.0
value = 5.0
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 162.0
margin_right = 448.0
margin_bottom = 200.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 42.0
margin_top = 5.0
margin_right = 202.0
margin_bottom = 33.0
rect_min_size = Vector2( 160, 0 )
text = "Endurance"

[node name="EnduranceSpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer2"]
margin_left = 206.0
margin_right = 406.0
margin_bottom = 38.0
rect_min_size = Vector2( 200, 0 )
min_value = 1.0
max_value = 99.0
value = 5.0
align = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 208.0
margin_right = 448.0
margin_bottom = 246.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_left = 42.0
margin_top = 5.0
margin_right = 202.0
margin_bottom = 33.0
rect_min_size = Vector2( 160, 0 )
text = "Intelligence"

[node name="IntelligenceSpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer3"]
margin_left = 206.0
margin_right = 406.0
margin_bottom = 38.0
rect_min_size = Vector2( 200, 0 )
min_value = 1.0
max_value = 99.0
value = 5.0
align = 1
